--- a/IpfsServer/IpfsServer.csproj
+++ b/IpfsServer/IpfsServer.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Ipfs.Server</AssemblyName>
     <RootNamespace>Ipfs.Server</RootNamespace>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
@@ -12,16 +12,56 @@
     <Version>0.42</Version>
 
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Ipfs.Core" Version="0.55.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Common.Logging" Version="3.4.1" />
+		<PackageReference Include="Common.Logging.Core" Version="3.4.1" />
+		<PackageReference Include="Microsoft.OpenApi" Version="1.3.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+		<PackageReference Include="Google.Protobuf" Version="3.21.5" />
+		
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" PrivateAssets="all" />
+		<PackageReference Include="MSTest.TestAdapter" Version="2.2.10" PrivateAssets="all" />
+		<PackageReference Include="MSTest.TestFramework" Version="2.2.10" PrivateAssets="all" />
+		<PackageReference Include="coverlet.msbuild" Version="3.1.2" PrivateAssets="all" />
+
+ 
+		<PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
+		<PackageReference Include="semver" Version="2.2.0" />
+		<PackageReference Include="System.Threading.Tasks.Dataflow" Version="6.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
+		<PackageReference Include="PeterO.Cbor" Version="4.5.2" />
+		<PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+		<PackageReference Include="protobuf-net" Version="3.1.17" />
+		<PackageReference Include="SharpZipLib" Version="1.3.3" />
+ 
+	</ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" PrivateAssets="All" />
   </ItemGroup>
-  <ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="Ipfs.Core">
+			<HintPath>..\..\net-ipfs-core\src\bin\Release\net6.0\Ipfs.Core.dll</HintPath>
+		</Reference>
+		<Reference Include="Makaretu.Dns">
+			<HintPath>..\..\net-dns\src\bin\Release\net6.0\Makaretu.Dns.dll</HintPath>
+		</Reference>
+		<Reference Include="Makaretu.Dns.Multicast">
+			<HintPath>..\..\net-mdns\src\bin\Release\net6.0\Makaretu.Dns.Multicast.dll</HintPath>
+		</Reference>
+		<Reference Include="Makaretu.Dns.Unicast">
+			<HintPath>..\..\net-udns\src\bin\Release\net6.0\Makaretu.Dns.Unicast.dll</HintPath>
+		</Reference>
+		<Reference Include="Makaretu.KBucket">
+			<HintPath>..\..\k-bucket\src\bin\Release\net6.0\Makaretu.KBucket.dll</HintPath>
+		</Reference>
+		<Reference Include="PeerTalk">
+			<HintPath>..\..\peer-talk\src\bin\Release\net6.0\PeerTalk.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+	<ItemGroup>
     <ProjectReference Include="..\src\IpfsEngine.csproj" />
   </ItemGroup>
 </Project>
