--- a/src/IpfsEngine.csproj
+++ b/src/IpfsEngine.csproj
@@ -29,7 +29,6 @@
 
     <GeneratePackageOnBuild Condition=" '$(Configuration)' == 'Release' ">true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-	<NoWarn>VSTHRD103</NoWarn>
   </PropertyGroup>
 
 	<PropertyGroup>
@@ -43,27 +42,16 @@
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>.pdb;$(AllowedOutputExtensionsInPackageBuildOutputFolder)</AllowedOutputExtensionsInPackageBuildOutputFolder>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Common.Logging" Version="3.4.1" />
-		<PackageReference Include="Common.Logging.Core" Version="3.4.1" />
-		<PackageReference Include="Google.Protobuf" Version="3.21.12" />
-		<PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
-		<PackageReference Include="semver" Version="2.2.0" />
-		<PackageReference Include="System.Threading.Tasks.Dataflow" Version="7.0.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-		<PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
-		<PackageReference Include="PeterO.Cbor" Version="4.5.2" />
-		<PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
-		<PackageReference Include="SharpZipLib" Version="1.4.1" />
-		<PackageReference Include="protobuf-net" Version="3.1.26" />
-		<PackageReference Include="SimpleBase" Version="4.0.0" />
-		<PackageReference Include="IPNetwork2" Version="2.6.548" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.27" PrivateAssets="All" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Ipfs.Core" Version="0.55.0" />
+    <PackageReference Include="Makaretu.Dns.Unicast" Version="0.11.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.0.0" />
+    <PackageReference Include="PeterO.Cbor" Version="3.1.0" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.10" />
+    <PackageReference Include="protobuf-net" Version="2.4.0" />
+    <PackageReference Include="SharpZipLib" Version="1.2.0" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<Reference Include="Ipfs.Core">
@@ -85,9 +73,5 @@
 			<HintPath>..\..\peer-talk\src\bin\Release\net7.0\PeerTalk.dll</HintPath>
 		</Reference>
 	</ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\peer-talk\src\PeerTalk.csproj" />
-  </ItemGroup>
 
 </Project>
